# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.215 2006/01/07 23:13:48 agaffney Exp $

*GLI-gtkfe-0.3 (27 Oct 2005)

  7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  warn user when choosing the GRP option and not Dynamic
  load extra kernel args on Bootloader.py

  5 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  Users.py: disable password fields if loading from profile, fix issue where
  if uid is blank, get error when loading from profile.  fix issue where
  password box is disabled after modifying and accepting changes for a user
  loaded from a profile. re-enable switching notebook page when selecting user
  from list.  Move buttons to upper right.
  
  4 Jan 2006; John N. Laliberte <allanonjl@gentoo.org>
  Timezone.py: fix loading of timezones from installprofile
  due to race condition.
  
  2 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
  fix to hopefully auto-scroll properly
  scroll to bottom of output tab on failure

  19 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  add install_mode support to Misc tab of CC screen

  11 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  change call to .get_active_text()
  set arch properly in CF

  4 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added StartupServices screen
  fixed some typos introduced by the CC-to-IP networking code
  only add interface to IP if type is 'dhcp' or 'static'
  StartupServices screen now works
  move StartupServices after ExtraPackages
  code cleanup for StartupServices
  Bootloader screen allows for selection of boot_device if bootloader in MBR
  Bootloader screen allows user to specify extra kernel args
  bootsplash option on Kernel screen
  rewrote Kernel.py to be more modular and added hardened- and grsec-sources

  3 Dec 2005; Andrew Gaffney <agaffney@gentoo.org>
  added CC networking pre-loading to Networking screen
