@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.215 2006/01/07 23:13:48 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.216 2006/01/08 00:15:13 allanonjl Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
-
+  7 Jan 2005; John N. Laliberte <allanonjl@gentoo.org>
+  ExtraPackages.py: Fix bug where leaving and going back to a screen causes
+  package to be listed twice.  add support for detecting GRP packages from
+  grppkgs.txt on the livecd only if the grp checkbox is checked on the stage
+  screen.  Add new property called 'DisplayName' to Package object for grp
+  support.
+  
   7 Jan 2006; Andrew Gaffney <agaffney@gentoo.org>
   warn user when choosing the GRP option and not Dynamic
   load extra kernel args on Bootloader.py
